--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 div.overlay{
     position: fixed;
     z-index: 99999;
-    background-color: rgb(128 128 128 / 50%);
+    background-color: rgb(128 128 128);
     width: 100%;
     height: 100%;
     top: 0;
