--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Libre Caslon Text", "EB Garamond", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 *,
 *::after,
@@ -9,7 +11,4 @@
   border: 0;
   border-spacing: 0;
   box-sizing: border-box;
-}
-body{
-  font-size: 16px;
 }
