feat: ajustes visuales

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -2,4 +2,4 @@
 // Componente Badge Skills
 const { skill } = Astro.props;
 ---
-<li><img class="h-5 rounded-sm" src={skill.img} alt={skill.text} /></li>
+<li><img class="h-5 md:h-7 rounded-sm" src={skill.img} alt={skill.text} /></li>
