--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-// src/pages/index.astro
+// Pagina de inicio
 import SectionHome from '../components/SectionHome.astro';
 import SectionExperience from '../components/SectionExperience.astro';
 import SectionProjects from '../components/SectionProjects.astro';
