--- a/src/components/A.astro
+++ b/src/components/A.astro
@@ -1,9 +1,10 @@
 ---
   const raiz = Astro.url.hostname;
+  const port = Astro.url.port === '80' ? '' : ':' + Astro.url.port;
   const {section, classExtra} = Astro.props;
 ---
 <a
-  class={`transition ease-in-out duration-500 block h-12 px-4 border-b-2 border-transparent ${classExtra}`}
-  href={`http://${raiz}:4321/#${section.toLowerCase()}`}>
+  class={`transition ease-in-out duration-300 block h-20 px-4 border-b-2 border-transparent ${classExtra}`}
+  href={`http://${raiz}${port}/#${section.toLowerCase()}`}>
   {section}
 </a>
