--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -19,7 +19,7 @@ interface Props {
 import IconGithub from '../assets/icons/brand-github.svg';
 import IconWeb from '../assets/icons/world-www.svg';
 import IconDetail from '../assets/icons/file-description.svg';
-import IconProjectCard from './IconProjectCard.astro';
+import Icon from './Icon.astro';
 const { project, id, path } = Astro.props;
 const link = [
     {alt:"Code", link:project.linkGithub, src:IconGithub},
@@ -27,18 +27,18 @@ const link = [
     {alt:"Detail", link:`${path}/${id}`, src:IconDetail}
 ]
 ---
-<li class="min-w-60 max-w-72">
-    <img transition:name={project.title} src={project.img} alt={project.title} srcset={project.img} class="min-w-60 max-w-72 rounded-lg border border-orange-400 border-solid">
-    <div class="p-1 text-sm text-gray-400 mt-1 bg-[#222222] border border-solid border-[#272727] rounded-md">
-        <p class="text-white text-xs block text-center font-bold mb-1">{project.title}</p>
-        <div class="flex flex-row justify-center gap-x-4">
-            {
-                link.map(({alt,link, src}) => (
-                    <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} class="text-white hover:text-orange-400">
-                        <IconProjectCard src={src} alt={alt}/>
-                    </a>
-                ))
-            }
-        </div>
+<li class="">
+  <img transition:name={project.title} src={project.img} alt={project.title} srcset={project.img} class=" rounded-lg border border-orange-400 border-solid">
+  <div class="p-1 text-base text-gray-400 mt-1 bg-[#222222] border border-solid border-[#272727] rounded-md">
+    <p class="text-white block text-center font-bold mb-1">{project.title}</p>
+    <div class="flex flex-row justify-center gap-x-4">
+      {
+        link.map(({alt,link, src}) => (
+          <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} class="text-white hover:text-orange-400">
+            <Icon src={src} alt={alt}/>
+          </a>
+        ))
+      }
     </div>
+  </div>
 </li>
