--- a/src/components/SectionHome.astro
+++ b/src/components/SectionHome.astro
@@ -1,38 +1,53 @@
 ---
 // Componente de la sección de inicio
-// shadow-[0_0.1rem_0.5rem_rgba(43,43,43,0.5)]
 import { Image } from 'astro:assets';
+import ContentTitleLayout from '../layouts/ContentTitleLayout.astro';
+import ContentLayout from '../layouts/ContentLayout.astro';
+import TitleSection from './TitleSection.astro';
+import Icon from './Icon.astro';
+
 import Profile from '../assets/img/profile2.png';
-import { profile }  from '../data/data.json';
-// console.log(profile);
+import Linkedin from '../assets/icons/brand-linkedin.svg';
+import Github from '../assets/icons/brand-github.svg';
+import PDF from '../assets/icons/file-type-pdf.svg';
+import FM from '../assets/icons/frontend-mentor.svg';
+import CW from '../assets/icons/code-wars.svg';
+
+const link = [
+  {alt:"Github", src:Github, link:"https://github.com/Marco90v"},
+  {alt:"Linkedin", src:Linkedin, link:"https://www.linkedin.com/in/marco90v/"},
+  {alt:"PDF", src:PDF, link:"https://flowcv.com/resume/6gnga9oa1r"},
+  {alt:"FM", src:FM, link:"https://www.frontendmentor.io/profile/marco90v"},
+  {alt:"CW", src:CW, link:"https://www.codewars.com/users/mvf90"}
+]
 ---
-<section id="home" class="relative w-[50rem] m-auto mt-28 bg-[#1c1c1c] p-10 rounded-lg border border-[#272727] border-solid">
-    <div class="absolute top-[-0.8rem] left-0 w-full text-center text-white text-sm font-bold">
-        <h3 class="border border-[#272727] border-solid inline text-center py-1 px-6 rounded-full bg-[#1c1c1c] text-lg">Profile</h3>
+<ContentLayout id="home" class="max-w-[1000px]">
+  <ContentTitleLayout>
+      <TitleSection title="Profile" />
+  </ContentTitleLayout>
+  <h1 class="text-center text-white text-3xl font-bold">Marco Velasquez Figarella</h1>
+  <div id="contentProfile" class="grid  md:grid-cols-3 gap-4 mt-4">
+    <h2 class="md:col-span-2 text-white text-xl font-bold">Frontend Developer</h2>
+    <p class="md:col-span-2">
+      I am a Frontend Developer with more than 3 years of experience in creating efficient, intuitive and performance optimized web interfaces.
+      My focus is to deliver quality user-centric solutions, ensuring a smooth, accessible and visually appealing experience.
+      I work with technologies such as React, TypeScript, JavaScript and CSS, along with tools such as Zustand, Tailwind CSS and Bootstrap.
+    </p>
+    <p class="md:col-span-2">
+      I have participated in a variety of projects, from administrative systems to landing pages and interactive applications, always prioritizing accessibility and cross-browser compatibility.
+    </p>
+    <p class="md:col-span-2">
+      With knowledge in backend like Node.js, Express and databases like MySQL and MongoDB, I ensure a smooth integration between frontend and backend to create robust and scalable applications.
+    </p>
+    <Image src={Profile} alt="Profile" class="w-full rounded-md row-start-1 max-w-60 sm:max-w-60 md:max-w-80 md:row-start-1 md:col-start-3 md:row-span-3 m-auto drop-shadow-[0_0_5px_rgba(227,227,227,0.2)] mask-gradient"/>
+    <div id="links" class="md:col-start-3 md:row-start-4 text-center flex justify-center items-center gap-x-4">
+      {
+        link.map(({alt,link, src}) => (
+          <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} rel="noopener noreferrer" class="text-white hover:text-orange-400">
+            <Icon src={src} alt={alt}/>
+          </a>
+        ))
+      }
     </div>
-    <h1 class="text-center text-white text-3xl font-bold">Marco Velasquez Figarella</h1>
-    <div id="contentProfile" class="grid grid-cols-3 gap-4 mt-4">
-        <h2 class="col-span-2 text-white text-xl font-bold">Frontend Developer</h2>
-        <p class="col-span-2">
-            I am a Frontend Developer with more than 3 years of experience in creating efficient, intuitive and performance optimized web interfaces.
-            My focus is to deliver quality user-centric solutions, ensuring a smooth, accessible and visually appealing experience.
-            I work with technologies such as React, TypeScript, JavaScript and CSS, along with tools such as Zustand, Tailwind CSS and Bootstrap.
-        </p>
-        <p class="col-span-2">
-            I have participated in a variety of projects, from administrative systems to landing pages and interactive applications, always prioritizing accessibility and cross-browser compatibility.
-        </p>
-        <p class="col-span-2">
-            With knowledge in backend like Node.js, Express and databases like MySQL and MongoDB, I ensure a smooth integration between frontend and backend to create robust and scalable applications.
-        </p>
-        <!-- <img src="/assets/img/profile.png" alt="Profile" class="w-full rounded-lg shadow-xl"> -->
-        <!-- border border-[#272727] shadow-md shadow-[#a8a8a8] -->
-        <!-- filter: drop-shadow(0px 0px 10px rgba(227, 227, 227, 0.2)); -->
-        <Image src={Profile} alt="Profile" class="w-full rounded-md col-start-3 row-start-1 row-span-3 m-auto drop-shadow-[0_0_5px_rgba(227,227,227,0.2)] mask-gradient"/>
-        <div id="links" class="col-start-3 row-start-4 content-center text-center">
-            <a href="https://www.linkedin.com/in/marco-velasquez-figarella-b54a0a221/" target="_blank" class="text-white text-sm font-bold">Linkedin</a>
-            <a href="https://github.com/marco-velasquez" target="_blank" class="text-white text-sm font-bold">Github</a>
-            <a href="https://twitter.com/marco_figarella" target="_blank" class="text-white text-sm font-bold">Twitter</a>
-            <a href="https://www.instagram.com/marco_figarella/" target="_blank" class="text-white text-sm font-bold">Instagram</a>
-        </div>
-    </div>
-</section>
+  </div>
+</ContentLayout>
