--- a/src/components/SectionProjects.astro
+++ b/src/components/SectionProjects.astro
@@ -16,36 +16,26 @@ interface Props {
   all?: "no" | "yes";
 }
 
+import ContentTitleLayout from '../layouts/ContentTitleLayout.astro';
+import ContentCardLayout from '../layouts/ContentCardLayout.astro';
+import ContentLayout from '../layouts/ContentLayout.astro';
+import TitleSection from './TitleSection.astro';
 import ProjectCard from './ProjectCard.astro';
+import ViewMore from './ViewMore.astro';
+import data from '../data/projects.json';
 // const projects = await fetch('https://raw.githubusercontent.com/Marco90v/JSONs/refs/heads/main/projectsData.json');
 // const data:project[] = await projects.json();
-import data from '../data/projects.json';
-
-// export async function getStaticPaths() {
-//   const data = await fetch("https://raw.githubusercontent.com/Marco90v/JSONs/refs/heads/main/projectsData.json").then(response => response.json());
-
-//   return data;
-// }
-
-import ViewMore from './ViewMore.astro';
-
 const { all="no" } = Astro.props;
-
-
 const newData = all === "no" ? data.slice(0, 6) : data;
 ---
-<section id="projects" class="relative w-10/12 m-auto mt-28 bg-[#1c1c1c] p-10 rounded-lg border border-[#272727] border-solid">
-  <div class="absolute top-[-0.8rem] left-0 w-full text-center text-white text-sm font-bold">
-    <h3 class="border border-[#272727] border-solid inline text-center py-1 px-6 rounded-full bg-[#1c1c1c] text-lg">Projects</h3>
-  </div>
-  <div class="projects-grid">
-    <!-- <ul class="flex flex-wrap justify-center gap-x-4 gap-y-2 mt-4"> -->
-    <ul class="grid grid-cols-[repeat(auto-fit,minmax(15rem,18rem))] justify-items-center content-center justify-center gap-x-4 gap-y-2 mt-4">
-        {
-          newData.map((project, index) => ( <ProjectCard project={project} id={index} path="projects" /> ))
-        }
-    </ul>
-  </div>
-  <!-- <a href="" class="block text-center">View more.</a> -->
+<ContentLayout id="projects">
+  <ContentTitleLayout>
+    <TitleSection title="Projects" />
+  </ContentTitleLayout>
+  <ContentCardLayout>
+    {
+      newData.map((project, index) => ( <ProjectCard project={project} id={index} path="projects" /> ))
+    }
+  </ContentCardLayout>
   {all==="no" && <ViewMore  href="/projects"/>}
-</section>
+</ContentLayout>
