--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,21 +1,33 @@
 ---
 // Componente del menú de navegación
 import A from "./A.astro";
+import arrow from '../assets/icons/caret-up.svg';
+import { Image } from "astro:assets";
 const sections = ['Home', 'Experience', 'Projects', 'Challenges', 'Contact'];
 const colors = ['red', 'blue', 'green', 'yellow', 'purple'];
-// console.log(Astro.url.pathname);
 ---
 <header class="border-b-2 border-[rgba(43,43,43,0.5)] border-solid bg-[#121212] shadow-[0_0.1rem_0.5rem_rgba(43,43,43,0.5)] fixed w-full z-10"> 
   <nav>
-    <ul class="flex justify-center content-center text-2xl font-bold">
+    <div class="md:hidden">
+      <Image id="btnMenu" src={arrow} alt="Menu" class="w-8 h-8 cursor-pointer m-auto border border-orange-500 rounded-full mt-4 transition-transform duration-300" width="32" height="32" />
+    </div>
+    <ul class="flex flex-col mt-4 md:mt-0 md:flex-row justify-center content-center text-lg md:text-2xl font-bold h-[0px] md:h-auto overflow-hidden transition-all duration-300">
       {
         sections.map((section, index) => {
           return (
-            <li class="leading-[5rem]">
-              <A section={section} classExtra={`hover:border-${colors[index]}-900`} />
+            <li class="leading-8 md:leading-[5rem]"> 
+              <A section={section} classExtra={`hover:border-${colors[index]}-900 hover:before:bg-${colors[index]}-900/10 hover:before:shadow-${colors[index]}-900/10`} />
             </li>
           )
         })
       }
   </nav>
 </header>
+<script>
+  const btnMenu = document.getElementById('btnMenu');
+  const ul = document.querySelector('ul');
+  btnMenu?.addEventListener("click", e=>{
+    btnMenu.classList.toggle('rotate-180');
+    ul?.classList.toggle('h-[160px]');
+  });
+</script>
