style: cambio de color en los titulos de las secciones

--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -7,7 +7,7 @@ import Input from "./Input.astro";
 ---
 <ContentLayout id="contact">
   <ContentTitleLayout>
-    <TitleSection title="Contact" />
+    <TitleSection title="Contact" colorTitle="text-purple-900" />
   </ContentTitleLayout>
   <form class="md:max-w-[800px] m-auto mt-5 grid grid-cols-2 gap-6">
     <Input type="text" id="name" name="name" placeholder="Full name" class="col-span-2 md:col-span-1"/>
