--- a/src/components/SectionExperience.astro
+++ b/src/components/SectionExperience.astro
@@ -15,7 +15,7 @@ import education from '../data/education.json';
 ---
 <ContentLayout id="experience">
   <ContentTitleLayout>
-    <TitleSection title="Experience" />
+    <TitleSection title="Experience" colorTitle="text-blue-900" />
   </ContentTitleLayout>
   <div id="skills" class="mt-4">
     <TitleSubSection title="Skills" />
