--- a/src/components/SectionHome.astro
+++ b/src/components/SectionHome.astro
@@ -23,7 +23,7 @@ const link = [
 ---
 <ContentLayout id="home" class="max-w-[1000px]">
   <ContentTitleLayout>
-      <TitleSection title="Profile" />
+      <TitleSection title="Profile" colorTitle="text-red-900"/>
   </ContentTitleLayout>
   <h1 class="text-center text-white text-3xl font-bold">Marco Velasquez Figarella</h1>
   <div id="contentProfile" class="grid  md:grid-cols-3 gap-4 mt-4">
