--- a/src/components/SectionProjects.astro
+++ b/src/components/SectionProjects.astro
@@ -18,7 +18,7 @@ const newData = all === "no" ? data.slice(0, 6) : data;
 ---
 <ContentLayout id="projects">
   <ContentTitleLayout>
-    <TitleSection title="Projects" />
+    <TitleSection title="Projects" colorTitle="text-green-900" />
   </ContentTitleLayout>
   <ContentCardLayout>
     {
