--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,4 +1,8 @@
 ---
-const {title} = Astro.props;
+interface Props {
+  title: string;
+  colorTitle?: string;
+}
+const {title, colorTitle="text-orange-500"} = Astro.props;
 ---
-<h3 class="border border-[#272727] border-solid inline text-center py-1 px-6 rounded-full bg-[#1c1c1c] text-2xl text-orange-500">{title}</h3>
+<h3 class={`border border-[#272727] border-solid inline text-center py-1 px-6 rounded-full bg-[#1c1c1c] text-2xl ${colorTitle}`}>{title}</h3>
