style: mejoras en el estilo visual de la web

--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -3,4 +3,4 @@
 import { Image } from 'astro:assets';
 const { src, alt } = Astro.props;
 ---
-<Image src={src} alt={alt} width={26} height={26} class="rounded-full p-[0.1rem] transition-colors duration-300 hover:bg-orange-500" />
+<Image src={src} alt={alt} width={26} height={26} class="rounded-full p-[0.1rem] transition-all duration-300 hover:bg-orange-500 hover:shadow-[0_0_0.25rem_0.25rem] hover:shadow-orange-500" />
