--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -5,4 +5,4 @@ interface Props {
 }
 const {title, colorTitle="text-orange-500"} = Astro.props;
 ---
-<h3 class={`border border-[#272727] border-solid inline text-center py-1 px-6 rounded-full bg-[#1c1c1c] text-2xl ${colorTitle}`}>{title}</h3>
+<h3 class={`border border-zinc-700 border-solid inline text-center py-1 px-6 rounded-full bg-zinc-900 text-2xl ${colorTitle}`}>{title}</h3>
