--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,9 @@ const {id} = Astro.params;
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <ClientRouter />
 </head>
-<body class="text-base text-white bg-[#121212] min-h-screen pb-14"> 
+<body class="text-base text-white bg-gradient-to-r from-gray-900 from-40% via-blue-950 via-70% to-gray-900 to-95% min-h-screen">
   { !id && <Navbar /> }
-  <main class="flex flex-col min-h-screen">
+  <main class="flex flex-col min-h-screen pb-14">
     <slot />
   </main>
 </body>
