--- a/src/components/DetailProject.astro
+++ b/src/components/DetailProject.astro
@@ -30,13 +30,17 @@ const link = [
     <Image transition:name={project.title} src={project?.img} alt={project?.title} inferSize class="rounded-lg border border-orange-400 border-solid" /> 
     <p class="text-gray-400 text-base my-2"><strong class="text-orange-400">Skills:</strong> {project?.skills}</p>
     <div class="flex flex-row justify-center gap-x-4">
-        {
-        link.map(({alt,link, src}) => (
-            <a href={link} target="_blank" class="text-white hover:text-orange-400">
-            <Icon src={src} alt={alt}/>
-            </a>
-        ))
-        }
+      {
+        link.map(({alt,link, src}) => {
+          if(link !== ""){
+            return(
+              <a href={link} target="_blank" class="text-white hover:text-orange-400">
+                <Icon src={src} alt={alt}/>
+              </a>
+            )
+          }
+        })
+      }
     </div>
   </article>
   <div class="flex flex-col lg:col-span-2">
