--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -20,6 +20,7 @@ import IconGithub from '../assets/icons/brand-github.svg';
 import IconWeb from '../assets/icons/world-www.svg';
 import IconDetail from '../assets/icons/file-description.svg';
 import Icon from './Icon.astro';
+import LinksIconProjects from './LinksIconProjects.astro';
 const { project, id, path } = Astro.props;
 const link = [
     {alt:"Code", link:project.linkGithub, src:IconGithub},
@@ -32,17 +33,7 @@ const link = [
   <div class="p-1 text-base text-gray-400 mt-1 bg-[#222222] border border-solid border-[#272727] rounded-md">
     <p class="text-white block text-center font-bold mb-1">{project.title}</p>
     <div class="flex flex-row justify-center gap-x-4">
-      {
-        link.map(({alt,link, src}) => {
-          if(link !== ""){
-            return(
-              <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} class="text-white hover:text-orange-400">
-                <Icon src={src} alt={alt}/>
-              </a>
-            )
-          }
-        })
-      }
+      <LinksIconProjects links={link} />
     </div>
   </div>
 </li>
