--- a/src/components/DetailProject.astro
+++ b/src/components/DetailProject.astro
@@ -23,24 +23,24 @@ const link = [
   {alt:"Live", link:project.linkLive, src:IconWeb},
 ]
 ---
-<section id={id} class="relative bg-[#1c1c1c] border border-[#272727] w-10/12 m-auto p-10 rounded-lg grid md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-4">
+<section id={id} class="relative bg-zinc-900 border border-zinc-700 w-10/12 max-w-[1250px] m-auto p-10 rounded-lg grid md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-4">
   <a href="/" class="absolute top-2 left-4 text-center text-white text-sm font-bold">
     <Icon src={IconBack} alt="Back"/>
   </a>
   <article>
-    <Image transition:name={project.title} src={project?.img} alt={project?.title} inferSize class="rounded-lg border border-orange-400 border-solid" /> 
-    <p class="text-gray-400 text-base my-2"><strong class="text-orange-400">Skills:</strong> {project?.skills}</p>
+    <Image transition:name={project.title} src={project?.img} alt={project?.title} inferSize class="rounded-lg border border-orange-500 border-solid" /> 
+    <p class="text-gray-400 text-base my-2"><strong class="text-orange-500">Skills:</strong> {project?.skills}</p>
     <div class="flex flex-row justify-center gap-x-4">
       <LinksIconProjects links={link} />
     </div>
   </article>
   <div class="flex flex-col lg:col-span-2">
-    <div class="bg-[#272727] border border-solid border-[#272727] rounded-md p-2 text-white mb-2">
+    <div class="bg-zinc-800 border border-solid border-zinc-700 rounded-md p-2 text-white mb-2">
     <h1 class="text-orange-500 text-2xl font-bold">{project?.title}</h1>
-    <h2 class="text-gray-400 text-base">{project?.description}</h2>
+    <h2 class="text-slate-400 text-base">{project?.description}</h2>
     </div>
-    <p class="text-gray-400 text-base"><strong class="text-orange-400">Author:</strong> {project?.author}</p>
-    <p class="text-gray-400 text-base"><strong class="text-orange-400">Client:</strong> {project?.client}</p>
-    <p class="text-white text-base mt-4"><strong class="text-orange-400">Details:</strong> {project?.details}</p>
+    <p class="text-gray-400 text-base"><strong class="text-orange-500">Author:</strong> {project?.author}</p>
+    <p class="text-gray-400 text-base"><strong class="text-orange-500">Client:</strong> {project?.client}</p>
+    <p class="text-white text-base mt-4"><strong class="text-orange-500">Details:</strong> {project?.details}</p>
   </div>
 </section>
