--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -19,8 +19,8 @@ interface Props {
 import IconGithub from '../assets/icons/brand-github.svg';
 import IconWeb from '../assets/icons/world-www.svg';
 import IconDetail from '../assets/icons/file-description.svg';
-import Icon from './Icon.astro';
 import LinksIconProjects from './LinksIconProjects.astro';
+import { Image } from 'astro:assets';
 const { project, id, path } = Astro.props;
 const link = [
     {alt:"Code", link:project.linkGithub, src:IconGithub},
@@ -29,8 +29,8 @@ const link = [
 ]
 ---
 <li class="">
-  <img transition:name={project.title} src={project.img} alt={project.title} srcset={project.img} class=" rounded-lg border border-orange-400 border-solid">
-  <div class="p-1 text-base text-gray-400 mt-1 bg-[#222222] border border-solid border-[#272727] rounded-md">
+  <Image inferSize transition:name={project.title} src={project.img} alt={project.title} class=" rounded-lg border border-orange-500 border-solid" />
+  <div class="p-1 text-base text-gray-400 mt-1 bg-zinc-800 border border-solid border-zinc-700 rounded-md">
     <p class="text-white block text-center font-bold mb-1">{project.title}</p>
     <div class="flex flex-row justify-center gap-x-4">
       <LinksIconProjects links={link} />
