--- a/src/components/SectionExperience.astro
+++ b/src/components/SectionExperience.astro
@@ -19,34 +19,34 @@ import education from '../data/education.json';
   </ContentTitleLayout>
   <div id="skills" class="mt-4">
     <TitleSubSection title="Skills" />
-    <ul class="flex flex-wrap justify-center gap-x-4 gap-y-2 mt-4">
+    <ul class="flex flex-wrap justify-center gap-4 mt-4">
       {
         skills.map((skill) => ( <Badge skill={skill} /> ))
       }
     </ul>
   </div>
 
-  <div id="workExperience" class="mt-8">
+  <div id="workExperience" class="mt-12">
     <TitleSubSection title="Work Experience" />
-    <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 px-4">
+    <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-4 px-4">
       {
         experience.map((experience) => ( <ExperienceCard experience={experience}/> ))
       }
     </ul>
   </div>
 
-  <div id ="otherExperience" class="mt-8">
+  <div id ="otherExperience" class="mt-12">
     <TitleSubSection title="Other Experience" />
-    <ul class="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 px-4">
+    <ul class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mt-4 px-4">
       {
         otherExperience.map((otherexperience) => ( <ExperienceCard experience={otherexperience} classes="lg:col-span-2"/> ))
       }
     </ul>
   </div>
 
-  <div id="education" class="mt-8">
+  <div id="education" class="mt-12">
     <TitleSubSection title="Education" />
-    <ul class="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 px-4">
+    <ul class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mt-4 px-4">
       {
         education.map((e) => ( <EducationCard education={e} classes="lg:col-span-2"/> ))
       }
