--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ import '../styles/global.css';
 import Navbar from '../components/Navbar.astro';
 const title = Astro.props.title;
 const {id} = Astro.params;
+const colors = ["blue", "cyan", "indigo"];
+const color = colors[Math.floor(Math.random() * colors.length)];
 ---
 
 <!DOCTYPE html>
@@ -17,8 +19,8 @@ const {id} = Astro.params;
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <ClientRouter />
 </head>
-<body class="text-base text-white bg-gradient-to-r from-gray-900 from-40% via-blue-950 via-70% to-gray-900 to-95% min-h-screen">
-  { !id && <Navbar /> }
+<body class={`text-base text-white bg-gradient-to-r from-gray-900 from-40% via-${color}-950 via-70% to-gray-900 to-95% min-h-screen`}>
+  { !id && <Navbar color={color} /> }
   <main class="flex flex-col min-h-screen pb-14">
     <slot />
   </main>
