--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -17,6 +17,6 @@ const { id, name, placeholder, type, class:c, required=true } = Astro.props;
     id={id}
     name={name}
     placeholder={placeholder}
-    class={`py-2 px-3 rounded-md bg-[#2a2e36] text-white focus:outline-none focus:ring-1 focus:ring-orange-400  ${c}`}
+    class={`py-2 px-3 rounded-md bg-zinc-700 text-white focus:outline-none focus:ring-1 focus:ring-orange-500 ${c}`}
     required={required}
 >
