--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -4,16 +4,17 @@ import ContentTitleLayout from "../layouts/ContentTitleLayout.astro";
 import ContentLayout from "../layouts/ContentLayout.astro";
 import TitleSection from "./TitleSection.astro";
 import Input from "./Input.astro";
+import SendButton from "./SendButton";
 ---
 <ContentLayout id="contact">
   <ContentTitleLayout>
     <TitleSection title="Contact" colorTitle="text-purple-700" />
   </ContentTitleLayout>
-  <form class="md:max-w-[800px] m-auto mt-5 grid grid-cols-2 gap-6">
+  <form id="contactForm" class="md:max-w-[800px] m-auto mt-5 grid grid-cols-2 gap-6" >
     <Input type="text" id="name" name="name" placeholder="Full name" class="col-span-2 md:col-span-1"/>
-    <Input type="text" id="email" name="name" placeholder="Email" class="col-span-2 md:col-span-1" />
+    <Input type="text" id="email" name="email" placeholder="Email" class="col-span-2 md:col-span-1" />
     <Input type="text" id="subject" name="subject" placeholder="Subject" class="col-span-2" />
-    <textarea id="message" name="message" placeholder="Message" rows="10" class="col-span-2 py-2 px-3 rounded-md bg-[#2a2e36] text-white focus:outline-none focus:ring-1 focus:ring-orange-400" required></textarea>
-    <button type="submit" class="p-2 col-span-2 md:col-span-1 md:col-start-2 w-full md:w-60 text-orange-400 text-base font-bold bg-[#2a2e36] rounded-md ml-auto hover:bg-orange-400 hover:text-black transition-colors duration-300">Send message</button>
+    <textarea id="message" name="message" placeholder="Message" rows="10" class="col-span-2 py-2 px-3 rounded-md bg-zinc-700 text-white focus:outline-none focus:ring-1 focus:ring-orange-500" required></textarea>
+    <SendButton client:load />
   </form>
 </ContentLayout>
