--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { ClientRouter } from 'astro:transitions';
+import { ViewTransitions } from 'astro:transitions';
 import '../styles/global.css';
 import Navbar from '../components/Navbar.astro';
 const title = Astro.props.title;
@@ -17,7 +17,7 @@ const color = colors[Math.floor(Math.random() * colors.length)];
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-  <ClientRouter />
+  <ViewTransitions />
 </head>
 <body class={`text-base text-white bg-gradient-to-r from-gray-900 from-40% via-${color}-950 via-70% to-gray-900 to-95% min-h-screen`}>
   { !id && <Navbar color={color} /> }
