--- a/src/components/SectionHome.astro
+++ b/src/components/SectionHome.astro
@@ -21,33 +21,35 @@ const link = [
   {alt:"CW", src:CW, link:"https://www.codewars.com/users/mvf90"}
 ]
 ---
-<ContentLayout id="home" class="max-w-[1000px]">
-  <ContentTitleLayout>
-      <TitleSection title="Profile" colorTitle="text-red-700"/>
-  </ContentTitleLayout>
-  <h1 class="text-center text-white text-3xl font-bold">Marco Velasquez Figarella</h1>
-  <div id="contentProfile" class="grid  md:grid-cols-3 gap-4 mt-4">
-    <h2 class="md:col-span-2 text-orange-500 text-xl font-bold">Frontend Developer</h2>
-    <p class="md:col-span-2">
-      I am a Frontend Developer with more than 3 years of experience in creating efficient, intuitive and performance optimized web interfaces.
-      My focus is to deliver quality user-centric solutions, ensuring a smooth, accessible and visually appealing experience.
-      I work with technologies such as <span class="bg-zinc-700 text-orange-400 px-2 rounded">React, TypeScript, JavaScript and CSS</span>, along with tools such as <span class="bg-zinc-700 text-orange-400 px-2 rounded">Zustand, Tailwind CSS and Bootstrap.</span>
-    </p>
-    <p class="md:col-span-2">
-      I have participated in a variety of projects, from administrative systems to landing pages and interactive applications, always prioritizing accessibility and cross-browser compatibility.
-    </p>
-    <p class="md:col-span-2">
-      With knowledge in backend like <span class="bg-zinc-700 text-orange-400 px-2 rounded">Node.js, Express and databases like MySQL and MongoDB</span>, I ensure a smooth integration between frontend and backend to create robust and scalable applications.
-    </p>
-    <Image src={Profile} alt="Profile" class="w-full rounded-md row-start-1 max-w-60 sm:max-w-60 md:max-w-80 md:row-start-1 md:col-start-3 md:row-span-3 m-auto drop-shadow-[0_0_5px_rgba(227,227,227,0.2)] mask-gradient"/>
-    <div id="links" class="md:col-start-3 md:row-start-4 text-center flex justify-center items-center gap-x-4">
-      {
-        link.map(({alt,link, src}) => (
-          <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} rel="noopener noreferrer" class="text-white hover:text-orange-400">
-            <Icon src={src} alt={alt}/>
-          </a>
-        ))
-      }
+<div class="min-h-screen flex">
+  <ContentLayout id="home" class="max-w-[1000px] md:mt-auto">
+    <ContentTitleLayout>
+        <TitleSection title="Profile" colorTitle="text-red-700"/>
+    </ContentTitleLayout>
+    <h1 class="text-center text-white text-4xl font-bold">Marco Velasquez Figarella</h1>
+    <div id="contentProfile" class="grid  md:grid-cols-3 gap-4 mt-4">
+      <h2 class="md:col-span-2 text-orange-500 text-2xl font-bold">Frontend Developer</h2>
+      <p class="md:col-span-2 text-lg">
+        I am a Frontend Developer with more than 3 years of experience in creating efficient, intuitive and performance optimized web interfaces.
+        My focus is to deliver quality user-centric solutions, ensuring a smooth, accessible and visually appealing experience.
+        I work with technologies such as <span class="bg-zinc-700 text-orange-400 px-2 rounded">React, TypeScript, JavaScript and CSS</span>, along with tools such as <span class="bg-zinc-700 text-orange-400 px-2 rounded">Zustand, Tailwind CSS and Bootstrap.</span>
+      </p>
+      <p class="md:col-span-2 text-lg">
+        I have participated in a variety of projects, from administrative systems to landing pages and interactive applications, always prioritizing accessibility and cross-browser compatibility.
+      </p>
+      <p class="md:col-span-2 text-lg">
+        With knowledge in backend like <span class="bg-zinc-700 text-orange-400 px-2 rounded">Node.js, Express and databases like MySQL and MongoDB</span>, I ensure a smooth integration between frontend and backend to create robust and scalable applications.
+      </p>
+      <Image src={Profile} alt="Profile" class="w-full rounded-md row-start-1 max-w-60 sm:max-w-60 md:max-w-80 md:row-start-1 md:col-start-3 md:row-span-3 m-auto drop-shadow-[0_0_5px_rgba(227,227,227,0.2)] mask-gradient"/>
+      <div id="links" class="md:col-start-3 md:row-start-4 text-center flex justify-center items-center gap-x-4">
+        {
+          link.map(({alt,link, src}) => (
+            <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} rel="noopener noreferrer" class="text-white hover:text-orange-400">
+              <Icon src={src} alt={alt}/>
+            </a>
+          ))
+        }
+      </div>
     </div>
-  </div>
-</ContentLayout>
+  </ContentLayout>
+</div>
